Re-generate the code to include new paths: /pull_request & /compressed_files
