# openapi_server/models/inline_response2001.py
@@ -14,20 +14,20 @@ class InlineResponse2001(Model):
     Do not edit the class manually.
     """
 
-    def __init__(self, build_url: str=None):
+    def __init__(self, build_status: str=None):
         """InlineResponse2001 - a model defined in OpenAPI
 
-        :param build_url: The build_url of this InlineResponse2001.
+        :param build_status: The build_status of this InlineResponse2001.
         """
         self.openapi_types = {
-            'build_url': str
+            'build_status': str
         }
 
         self.attribute_map = {
-            'build_url': 'build_url'
+            'build_status': 'build_status'
         }
 
-        self._build_url = build_url
+        self._build_status = build_status
 
     @classmethod
     def from_dict(cls, dikt: dict) -> 'InlineResponse2001':
@@ -39,22 +39,28 @@ class InlineResponse2001(Model):
         return util.deserialize_model(dikt, cls)
 
     @property
-    def build_url(self):
-        """Gets the build_url of this InlineResponse2001.
+    def build_status(self):
+        """Gets the build_status of this InlineResponse2001.
 
 
-        :return: The build_url of this InlineResponse2001.
+        :return: The build_status of this InlineResponse2001.
         :rtype: str
         """
-        return self._build_url
+        return self._build_status
 
-    @build_url.setter
-    def build_url(self, build_url):
-        """Sets the build_url of this InlineResponse2001.
+    @build_status.setter
+    def build_status(self, build_status):
+        """Sets the build_status of this InlineResponse2001.
 
 
-        :param build_url: The build_url of this InlineResponse2001.
-        :type build_url: str
+        :param build_status: The build_status of this InlineResponse2001.
+        :type build_status: str
         """
+        allowed_values = ["success", "failure", "aborted", "not_built", "unstable"]  # noqa: E501
+        if build_status not in allowed_values:
+            raise ValueError(
+                "Invalid value for `build_status` ({0}), must be one of {1}"
+                .format(build_status, allowed_values)
+            )
 
-        self._build_url = build_url
+        self._build_status = build_status
