# openapi_server/models/inline_response2002.py
@@ -1,0 +1,60 @@
+# coding: utf-8
+
+from datetime import date, datetime
+
+from typing import List, Dict, Type
+
+from openapi_server.models.base_model_ import Model
+from openapi_server import util
+
+
+class InlineResponse2002(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, pull_request_url: str=None):
+        """InlineResponse2002 - a model defined in OpenAPI
+
+        :param pull_request_url: The pull_request_url of this InlineResponse2002.
+        """
+        self.openapi_types = {
+            'pull_request_url': str
+        }
+
+        self.attribute_map = {
+            'pull_request_url': 'pull_request_url'
+        }
+
+        self._pull_request_url = pull_request_url
+
+    @classmethod
+    def from_dict(cls, dikt: dict) -> 'InlineResponse2002':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :return: The inline_response_200_2 of this InlineResponse2002.
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def pull_request_url(self):
+        """Gets the pull_request_url of this InlineResponse2002.
+
+
+        :return: The pull_request_url of this InlineResponse2002.
+        :rtype: str
+        """
+        return self._pull_request_url
+
+    @pull_request_url.setter
+    def pull_request_url(self, pull_request_url):
+        """Sets the pull_request_url of this InlineResponse2002.
+
+
+        :param pull_request_url: The pull_request_url of this InlineResponse2002.
+        :type pull_request_url: str
+        """
+
+        self._pull_request_url = pull_request_url
